progress, improved default themes & 2nd system colors slide

--- a/index.html
+++ b/index.html
@@ -141,9 +141,15 @@
 									<option value="audi">Audi</option>
 								</select>
 							</label>
+							<br><br>
+							<label>Text area
+								<br><Textarea rows="6">Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</Textarea>
+							</label>
+							<br><br>
+							<button>Submit</button>
 						</form>
 					</div>
-					<div>
+					<div class="hide">
 						<div>
 							<header>
 								<h1>Website name</h1>
@@ -197,6 +203,12 @@
 									<option value="audi">Audi</option>
 								</select>
 							</label>
+							<br><br>
+							<label>Text area
+								<br><Textarea rows="6">Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</Textarea>
+							</label>
+							<br><br>
+							<button>Submit</button>
 						</form>
 					</div>
 				</div>
@@ -235,27 +247,26 @@
 			</article>
 
 			<article id="other-system">
-				<h2>other system colors</h2>
+				<h2>other system colors 🙄</h2>
 				<div>
-					<style contenteditable="true" style="font-size: 0.6em">.system-demo2 {
+					<style contenteditable="true">.system-demo2 {
   p:nth-of-type(1) {
     color: LinkText;
-  }
-  p:nth-of-type(2) {
-    color: ActiveText;
   }
   p:nth-of-type(3) {
     color: VisitedText;
   }
-  p:nth-of-type(4) {
-    background-color: ButtonFace;
+  p:nth-of-type(5) {
+    color: ActiveText;
   }
 }</style>
-					<div class="system-demo2">
+					<div class="system-demo2 small">
 						<p>How are you?</p>
-						<p>Yeah good, you?</p>
+						<p><a href="https://notarealsite.com">Yeah good, you?</a></p>
 						<p>Could be worse!</p>
-						<p>Nice weather, innit?</p>
+						<p><a href="https://sarajoy.dev">Nice weather, innit?</a></p>
+						<p>It's lovely! Storm tomorrow though.</p>
+						<p><a href="https://notarealsite.com">Yay, I love storms!</a></p>
 					</div>
 				</div>
 			</article>
