--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
 			<article id="both">
 				<h2>why not both?</h2>
 				<div>
-					<p>GOOD QUESTION</p>
+					<div class="waviy hide">
+						<span style="--i:1">G</span><span style="--i:2">O</span><span style="--i:3">O</span><span style="--i:4">D</span>
+						<span style="--i:6">Q</span><span style="--i:7">U</span><span style="--i:8">E</span><span style="--i:9">S</span><span style="--i:10">T</span><span style="--i:11">I</span><span style="--i:12">O</span><span style="--i:13">N</span><span style="--i:14">!</span>
+					</div>
+					<p class="hide">Both!</p>
+					<p class="hide">Both.</p>
+					<p class="hide">Both is good.</p>
+					<p class="hide">*nods*</p>
 				</div>
 			</article>
 
