choice table added

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 			<article id="colors">
 				<h2>other colours</h2>
 				<div>
-					<p>color-mix, relative colors?, filtering</p>
+					<p>color-mix, relative colors (not yet in all browsers), filtering</p>
 				</div>
 			</article>
 
@@ -345,14 +345,30 @@
 			<article id="lightdark">
 				<h2>light-dark()</h2>
 				<div>
-					<p>even easier!</p>
+					<p>even easier! (not yet in all browsers)</p>
 				</div>
 			</article>
 
 			<article id="choice">
 				<h2>takeaway: offer choice</h2>
 				<div>
-					<p>two toggles, done! [make a nice grid]</p>
+					<table>
+						<tr>
+							<th></th>
+							<th>light mode</th>
+							<th>dark mode</th>
+						</tr>
+						<tr>
+							<th>more contrast</th>
+							<td class="light">Hi!</td>
+							<td class="dark">Hi!</td>
+						</tr>
+						<tr>
+							<th>less contrast</th>
+							<td class="light lowcontrast">Hi!</td>
+							<td class="dark lowcontrast">Hi!</td>
+						</tr>
+					</table>
 				</div>
 			</article>
 
