added a new summary slide

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<main class="rainbow">
 			<article id="title" class="title centerblock center mgn">
 				<h1>why not both? 🤔</h1>
-				<p class="hide">A.k.a. Light mode Vs Dark mode.</p>
+				<p class="hide">a.k.a. Light mode Vs Dark mode.</p>
 				<p class="hide balance">Or, why building both dark and light schemes together is easy, actually.</p>
 			</article>
 
@@ -435,6 +435,17 @@
 				</div>
 			</article>
 
+			<article id="summary">
+				<h2>in summary</h2>
+				<div>
+					<p class="hide">Use <code>color-scheme: light dark;</code></p>
+					<p class="hide">Use <code>color-mix()</code> when adding colors</p>
+					<p class="hide">Support user contrast preferences</p>
+					<p class="hide">Look forward to <code>light-dark()</code>!</p>
+					<p class="hide">Experiment and play :)</p>
+				</div>
+			</article>
+
 			<article id="choice">
 				<h2>takeaway: offer choice</h2>
 				<div>
@@ -477,8 +488,8 @@
 					<p>Huge thanks to the 11tyConf Crew: Zach, Olivia, Mike and David.</p>
 					<p class="center">🙏💖🎈</p>
 					<p class="right">🏠 <a href="https://sarajoy.dev">sarajoy.dev</a>
-						<br>🛝 <a href="https://saraslides.netlify.app">this slide deck</a> :)
-						<br>👋 <a href="https://front-end.social/@sarajw">@sarajw@front-end.social</a></p>
+						<br>👋 <a href="https://front-end.social/@sarajw">@sarajw@front-end.social</a>
+						<br>🛝 <a href="https://saraslides.netlify.app">this slide deck</a>: saraslides.netlify.app :)</p>
 				</div>
 			</article>
 
