changes for publishing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 	</head>
 	<body>
 		<main class="rainbow">
-			<article id="title" class="title centerblock center mgn">
+
+			<article id="title" class="title centerblock center relative">
+				<p class="instructions center">I rolled my own slide deck. Wasn't the best plan, it's really quite janky!
+					<br>Click to toggle the <button onClick="slideshowToggle()">reader view</button> or hover your cursor down to the bottom-left and click the Slideshow button there.
+					<br>There's another hoverable <button onClick="modeSwitcher()">color mode</button> button bottom-right for toggling light, dark and auto modes.
+					<br>Otherwise browse around with your arrow keys and enjoy the jank!
+					<br>It was made to look best at a 16:9 aspect ratio.
+				</p>
 				<h1>why not both? 🤔</h1>
 				<p class="hide">a.k.a. Light mode Vs Dark mode.</p>
 				<p class="hide balance">Or, why building both dark and light schemes together is easy, actually.</p>
@@ -485,11 +492,10 @@
 				<h2>thank you!</h2>
 				<div>
 					<p>I'm so honoured to be taking part in the 11ty Conference!</p>
-					<p>Huge thanks to the 11tyConf Crew: Zach, Olivia, Mike and David.</p>
+					<p>Huge thanks to the 11tyConf Crew: Zach, Olivia, Mike, David and captioner Diane.</p>
 					<p class="center">🙏💖🎈</p>
 					<p class="right">🏠 <a href="https://sarajoy.dev">sarajoy.dev</a>
 						<br>👋 <a href="https://front-end.social/@sarajw">@sarajw@front-end.social</a>
-						<br>🛝 <a href="https://saraslides.netlify.app">this slide deck</a>: saraslides.netlify.app :)</p>
 				</div>
 			</article>
 
