--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="color-scheme" content="light dark">
 		<link rel="stylesheet" href="style.css">
-		<title>Slideshow</title>
+		<title>Why not both 🤔 | Slide deck</title>
 	</head>
 	<body>
 		<main class="rainbow">
